--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 }
 
 .container {
-  width: 500px;
+  width: 650px;
   margin: 0 auto;
 }
 
@@ -123,6 +123,10 @@ p {
   font-size: 15px;
   font-weight: 300;
   margin-top: 5px;
+}
+
+i {
+  font-size: 50px;
 }
 
 
