--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
+@import url("avatar.css");
+@import url("button.css");
+@import url("banner.css");
+@import url("card.css");
+
 .container {
-  width: 650px;
+  width: 1000px;
   margin: 0 auto;
+  padding-top: 20px;
 }
 
 .poster {
@@ -11,19 +17,6 @@
   width: 100px;
 }
 
-
-#profile {
-  width: 25%;
-}
-
-.card {
-  background: white;
-  padding: 20px;
-  margin-bottom: 20px;
-  border-radius: 4px;
-  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.2);
-}
-
 .text-center {
   text-align: center;
  }
@@ -32,17 +25,6 @@
   text-align: left;
  }
 
-.btn-peach {
-  background-color: #F87060;
-  color: white;
-  font-weight: 500;
-  padding: 10px;
-  border-radius: 4px;
-}
-
-.btn-peach:hover {
-  background-color: #DB6560;
-  }
 
 .list-inline {
   padding-left: 0;
@@ -51,10 +33,6 @@
 .list-inline li {
   display: inline-block;
   padding: 20px;
-}
-
-.img-circle {
-  border-radius: 50%
 }
 
 .fa {
@@ -111,6 +89,7 @@ body {
   background-color: #F5F5F5;
   font-weight: 300;
   font-size: 15px;
+  margin: 0;
 }
 
 a {
@@ -127,6 +106,7 @@ p {
   font-size: 15px;
   font-weight: 300;
   margin-top: 5px;
+
 }
 
 
